# graduaatsproef

./: .gitignore  README.md
docs/: graduaatsproef_presentatie.pptx  hello.py  progress.docx  verslag_graduaatsproef_dietbrand_tollenaere.docx
hello-qml/: CMakeLists.txt  Main.qml  main.cpp
v4/: CMakeLists.txt  CustomButton.qml  CustomMenuItem.qml  DriverDetail.qml  DriverList.qml  GascardList.qml  Main.qml  VehicleList.qml  driverlist.cpp  driverlist.h  drivermodel.cpp  drivermodel.h  gascardlist.cpp  gascardlist.h  gascardmodel.cpp  gascardmodel.h  images.qrc  localhost-chain.pem  main.cpp  networkmanager.cpp  networkmanager.h  qml.qrc  vehiclelist.cpp  vehiclelist.h  vehiclemodel.cpp  vehiclemodel.h
